--- a/style.css
+++ b/style.css
@@ -219,12 +219,15 @@ animation-iteration-count: 1;
     transform: skewX(-45deg) scale(1, 1);
 }
 
-.MainPage_S2 img{
-    width: 100%;
-    margin-top: 3rem;
-    margin-left: 2rem;
+.MainPage_S2{
+    display: center;
 }
 
+.MainPage_S2 img{
+    width: 80%;
+    margin-top: 5rem;
+    margin-left: 10rem;
+}
 /*Achievements*/
 
 .Achievements {
@@ -257,7 +260,7 @@ animation-iteration-count: 1;
 }
 
 .imagen img{
-    max-width: 120px;
+    width: 50%;
 }
 
 /* Nosotros */
